# app/Http/Controllers/Api/InvoiceTestController.php
@@ -31,11 +31,14 @@ class InvoiceTestController extends Controller
      *             required={"name", "phone", "total", "currency", "year", "make", "model", "services"},
      *             @OA\Property(property="name", type="string"),
      *             @OA\Property(property="phone", type="number"),
+     *             @OA\Property(property="email", type="string"),
      *             @OA\Property(property="total", type="number"),
      *             @OA\Property(property="currency", type="string"),
      *             @OA\Property(property="year", type="number"),
      *             @OA\Property(property="make", type="string"),
      *             @OA\Property(property="model", type="string"),
+     *             @OA\Property(property="business_id", type="string"),
+     *             @OA\Property(property="api_key", type="string"),
      *             @OA\Property(
      *                 property="services",
      *                 type="array",
