# storage/api-docs/api-docs.json
@@ -34,6 +34,9 @@
                                     "phone": {
                                         "type": "number"
                                     },
+                                    "email": {
+                                        "type": "string"
+                                    },
                                     "total": {
                                         "type": "number"
                                     },
@@ -47,6 +50,12 @@
                                         "type": "string"
                                     },
                                     "model": {
+                                        "type": "string"
+                                    },
+                                    "business_id": {
+                                        "type": "string"
+                                    },
+                                    "api_key": {
                                         "type": "string"
                                     },
                                     "services": {
